updated package.json; fixed employee table

--- a/src/index-template.html
+++ b/src/index-template.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="temple">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>template</title>
+    <title>Cyber Provenance</title>
   </head>
   <body>
     <div id="root"></div>
